--- a/templates/admin/payments.html
+++ b/templates/admin/payments.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Brint online school | Add Course</title>
+    <title>Brint Online school | Payment</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="robots" content="all,follow">
@@ -31,10 +31,10 @@
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
   </head>
   <body>
-      {% include "snippets/sidebar.html" %}
-        <div class="page">
-        <!-- navbar-->
-        {% include "snippets/header.html" %}
+    {% include "snippets/sidebar.html" %}
+    <div class="page">
+    <!-- navbar-->
+    {% include "snippets/header.html" %}
         
         <!-- Statistics Section-->
         <section class="statistics">
@@ -45,9 +45,9 @@
                 <div class="col-lg-10">
                   <br>
                   <div class="form-inner">
-                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">School</strong></div>
+                    <div class="logo text-uppercase"><span>Brint</span><strong class="text-primary">Online School</strong></div>
                     <p>online school management platform</p>
-                      {% if messages %}
+                        {% if messages %}
                           {% for message in messages %}
                           {% if message.tags == 'success' %}
                             <span id="demoMessage4" class="btn btn-success">{{message}}</span>
@@ -58,20 +58,36 @@
                           {% endfor %}
                       {% endif %}
                     <br>
-                    <form class="text-left form-validate" method="POST" action="{% url "AddCourseSave" %}">
-                      {% csrf_token %}
-                      <div class="form-group-material">
-                        <input id="coursename" type="text" name="coursename" required data-msg="Please enter CourseName" class="input-material">
-                        <label for="coursename" class="label-material">CourseName</label>
-                      </div>
-                      
-                      <div class="form-group text-center">
-                        <input id="register" type="submit" value="Add Course" class="btn btn-primary">
-                      </div>
-
-                      
-                    </form>
                     
+              <form class="text-left form-validate" method="POST" action="{% url "PaymentsInvoice" %}"  enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-group-material">
+                  <label for="student" class="label-material">Student</label>
+                  <select id="student" type="text" name="student" required data-msg="Please enter Student Name"
+                    class="form-control select-material">
+                    {% for stud in students %}
+                    <option value="{{ stud.admin.first_name }} {{stud.admin.last_name }}">{{ stud.admin.first_name }} {{stud.admin.last_name }}</option>
+                    {% endfor %}
+                  </select>
+                </div>
+
+                <div class="form-group-material">
+                  <label for="image" class="label-material">Invoice File</label>
+                  <input id="image" type="file" name="image" required data-msg="Please Select Student Invoice"
+                    class="input-material">
+                </div>
+
+                  <!-- <div class="form-group-material">
+                    <label for="student" class="label-material">Student</label>
+                    <select id="student" type="text" name="student" required data-msg="Please enter Student Name"
+                      class="form-control select-material">
+                    </select>
+                  </div> -->
+
+                  <div class="form-group text-center">
+                    <input id="register" type="submit" value="Upload Invoice" class="btn btn-primary">
+                  </div>
+              </form>
                   </div>
                 </div>
                 <div class="col-lg-1">
@@ -79,6 +95,27 @@
             </div>
             </div>
         </section>
+
+      <section class="container-fluid card">
+        <div class="row d-flex">
+            <div class="col-lg-6">
+                <div class="card" >
+                    <strong class="text-primary" style="font-size: 25px;">All Invoices</strong>
+                {% for invoice in invoices %}
+                    <a href="{{invoice.invoice}}" target="_blank" style="padding:5px"> <i class="icon-rss-feed"></i>View Invoice Posted On: {{invoice.created}} For {{invoice.student}}</a>
+                {% endfor %}
+                </div>
+            </div>
+            <div class="col-lg-6">
+                <div class="card" >
+                    <strong class="text-primary" style="font-size: 25px;">All Reciepts</strong>
+                {% for reciept in receipts %}
+                    <a href="{{reciept.reciept}}" target="_blank" style="padding:5px"> <i class="icon-rss-feed"></i>View reciept Uploaded On: {{reciept.created}} For {{reciept.student}}</a>
+                {% endfor %}
+                </div>
+            </div>
+        </div>
+    </section>
 
         {% include "snippets/footer.html" %}
         </div>
@@ -97,5 +134,6 @@
       <script src="{% static "dashboard/js/home-premium.js" %}"> </script>
       <!-- Main File-->
       <script src="{% static "dashboard/js/front.js" %}"></script>
+   
     </body>
 </html>
