--- a/templates/staff/sidebar.html
+++ b/templates/staff/sidebar.html
@@ -48,7 +48,7 @@
 
                 {% url "FeedbackMessage" as FeedbackMessage %}
                 <li class="{% if request.path == FeedbackMessage %} active {% endif %}">
-                    <a href="{% url "FeedbackMessage" %}"> <i class="{%if request.path == FeedbackMessage %} active {% endif %} icon-home"></i> FeedBack</a>
+                    <a href="{% url "FeedbackMessage" %}"> <i class="{%if request.path == FeedbackMessage %} active {% endif %} icon-home"></i>Message Admin</a>
                 </li>
         </ul>
       </div>
