--- a/templates/student/home.html
+++ b/templates/student/home.html
@@ -84,6 +84,13 @@
         </section>
 
         <br/>
+        <section class="container-fluid">
+            <div class="row d-flex">
+                <div class="col-lg-4 card" style="padding: 50px;">
+                     <a href="https://www.youtube.com/shorts/ZkTzmeLaZIw" target="_blank" />How to Make Payment (Click This Link) </a>
+                </div>
+            </div>
+        </section>
         <br/>
         <section class="container-fluid card">
             <div class="row d-flex">
