--- a/templates/admin/manageStudent.html
+++ b/templates/admin/manageStudent.html
@@ -79,7 +79,13 @@
                         <td>{{ student.admin.date_joined }}</td>
                         <td>{{ student.admin.last_login }}</td>
                         <td>{{ student.level.level }}</td>
-                        <td><a class="btn-success btn btn-sm" href="{% url "UpdateStudent" student_id=student.admin.id  %}">Update </a></td>
+                        <td>
+                        <a class="btn-success btn btn-sm" href="{% url "UpdateStudent" student_id=student.admin.id  %}" style="margin-bottom:5px;">Update </a>
+                        <form method="post" action="{% url 'DeleteStudent' student_id=student.admin.id %}">
+                          {% csrf_token %}
+                          <button type="submit" class="btn btn-danger">Delete</button>
+                        </form>
+                      </td>
                       </tr>
                       {% endfor %}
                     </tbody>
