--- a/templates/snippets/sidebar.html
+++ b/templates/snippets/sidebar.html
@@ -8,7 +8,7 @@
             <div class="sidenav-header-inner text-center"><a href="pages-profile.html"><img src="{% static "dashboard/img/mockup5.jpg" %}" alt="person" class="img-fluid rounded-circle"></a>
               <h2 class="h5">{{ request.user.first_name }} {{ request.user.last_name }} </h2><span>{{ request.user.username }}</span>
               <br>
-              <a href="{% url "UserProfile" %}" class="btn btn-success btn-block">Update Profile</a>
+              <!-- <a href="{% url "UserProfile" %}" class="btn btn-success btn-block">Update Profile</a> -->
             </div>
             <!-- Small Brand information, appears on minimized sidebar-->
             <div class="sidenav-header-logo"><a href="index.html" class="brand-small text-center"> <strong>B</strong><strong class="text-primary">D</strong></a></div>
